fix: backface-visibility

--- a/styles/index.css
+++ b/styles/index.css
@@ -212,6 +212,14 @@ button {
   border-radius: 10px;
 }
 
+.card-cover {
+  backface-visibility: hidden;
+}
+
+.card-image-container {
+  backface-visibility: visible;
+}
+
 .card-image {
   position: relative;
   object-fit: cover;
